# qtsqlx

./: CMakeLists.txt  README.md
src/: DbUtils.h  TypeUtils.h
test/: DbUtilsTest.cpp  TypeUtilsTest.cpp  main.cpp
